--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pix da Sorte</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  
   <style>
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.6rem;
+      }
+      .cta-button {
+        width: 100%;
+        padding: 1rem;
+        font-size: 1rem;
+      }
+      .feature, .testimonials {
+        padding: 1rem;
+      }
+      .testimonial-content {
+        font-size: 0.95rem;
+        text-align: center;
+      }
+      .testimonial {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+    
     * {
       margin: 0;
       padding: 0;
